--- a/src/Home.css
+++ b/src/Home.css
@@ -4,6 +4,7 @@
   background-color: #f5f5f5;
   overflow-x: hidden;
   position: relative; 
+  padding: 30px;
 }
 
 .img1 {
@@ -12,6 +13,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
+
 }
 
 .container_home {
@@ -19,6 +21,7 @@
   width: 60%;
   text-align: right;
   padding: 20px;
+  padding-top: 0px;
   box-sizing: border-box;
    overflow: hidden;
    margin: 1px;
