--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -1,6 +1,6 @@
 .B {
     text-align: center;
-    padding: 20px;
+    padding: 30px;
     background-color: #f5f5f5;
     height: 100vh;
     margin-top: 0px;
@@ -57,8 +57,8 @@
 @media only screen and (max-width: 600px) {
     .this {
         font-size: 2rem;
-        margin-top: 30px;
-        margin: 60px;
+        padding-top: 30px;
+        margin: 30px;
 
     }
 
@@ -70,8 +70,9 @@
     .but_qui {
         height: 60px;
         font-size: 20px;
-        margin-top: 20px;
+        margin-top: 15px;
     }
     .B{
         text-align: center;
+      
 }}
